--- a/templates/guest_order_confirmation.html
+++ b/templates/guest_order_confirmation.html
@@ -102,7 +102,7 @@
                     
                     <div class="text-center mt-3">
                         <small class="text-muted">
-                            <i class="bi bi-info-circle"></i> Need help? Contact us at support@legitcollections.com
+                            <i class="bi bi-info-circle"></i> Need help? Contact us via WhatsApp: +254 113 690 898
                         </small>
                     </div>
                 </div>
